5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1643_2704.log
== TEST (2019-04-08 18:26:33) 
-- CODE:
nota = float(input"nota: ")
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print("S")
	print(nota + bonificacao)
	
else:
	print("N")
	print(nota)
	

-- ERROR:
File "XXXX", line 1
    nota = float(input"nota: ")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:26:46) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print("S")
	print(nota + bonificacao)
	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:26:50) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print("S")
	print(nota + bonificacao)
	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:26:53) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print("S")
	print(nota + bonificacao)
	
else:
	print("N")
	print(nota)
	

-- EXECUTION TIME:
0.122445
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:27:25) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print("S")
	print(nota + bonificacao)
	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:27:47) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print("S")
	print(nota + bonificacao)
	
else:
	print(nota)
	print("N")
	
	

-- OUTPUT:
5.0
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:27:50) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print("S")
	print(nota + bonificacao)
	
else:
	print(nota)
	print("N")
	
	

-- EXECUTION TIME:
0.127961
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
N
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:28:11) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:28:15) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- EXECUTION TIME:
0.185911
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:28:26) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:28:30) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:28:33) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:28:35) 
-- CODE:
nota = float(input("nota: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:29:48) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:29:52) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:29:56) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = nota*(10/100)

if (nota >= 6.0):
	print(nota + bonificacao)
	print("S")

	
else:
	print("N")
	print(nota)
	

-- EXECUTION TIME:
0.156055
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:01) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)")

if (bonificacao.upper == "S"):
	print(nota + nota*(10/100))
	print("S")
	
else:
	print(nota)
	print("N")
	

-- OUTPUT:
5.0
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:31) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper == "S"):
	print(nota + nota*(10/100))
	print("S")
	
else:
	print(nota)
	print("N")
	

-- OUTPUT:
5.0
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:01) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	print("S")
	
else:
	print(nota)
	print("N")
	

-- OUTPUT:
5.5
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:36:07) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	print("S")
	
else:
	print(nota)
	print("N")
	

-- EXECUTION TIME:
0.140554
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
S
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:17) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	
else:
	print(nota)
	print("N")
	

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:36:27) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	
else:
	print(nota)
	print("N")
	

-- EXECUTION TIME:
0.177517
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:31) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	
else:
	print(nota)
	

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:36) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	
else:
	print(nota)
	

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:45) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	
else:
	print(nota)
	

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:36:46) 
-- CODE:
nota = float(input("nota 0 a 10: "))
bonificacao = input("Bonificacao? (S/N)   ")

if (bonificacao.upper() == "S"):
	print(nota + nota*(10/100))
	
else:
	print(nota)
	

-- EXECUTION TIME:
0.146509
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
